<resources>
    <string name="app_name">App Store</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="price">Price</string>
    <string name="mobile">Mobile</string>
    <string name="AppStore">Invoice</string>
    <string name="item_name">Item Name</string>

</resources>